--- a/_posts/2020-05-28-微信摇一摇(redis实现).md
+++ b/_posts/2020-05-28-微信摇一摇(redis实现).md
@@ -19,4 +19,54 @@ tags:
     geoadd key longitude latitude member [longitude latitude member ...]  
     longitude ：经度  
     latitude ：纬度  
-    member ：成员
+    member ：成员  
+
+### 可以单个或者批量设置
+
+    127.0.0.1:6379> geoadd wx_location 120.10881613485718 30.283060227590862 xiaoming  120.11377822153473 30.28870234639129 xiaohong 120.1169432281723 30.28639550944544 xiaozhi   
+    (integer) 3
+
+### 获取两个地点之间的距离
+
+    geodist key member1 member2 [unit]
+    unit有四个单位 'm' => '米' ，'km' => 千米 ，'mi' => 英里，'ft' => 尺
+
+### 获取xiaoming和xiaohong之间的距离
+
+    127.0.0.1:6379> geodist wx_location xiaoming xiaohong km
+    "788.0245"
+
+### 获取地址位置信息 可查询多个
+
+    geopos key member1  [member2]
+
+### 获取xiaohong的地理位置
+    127.0.0.1:6379> geopos wx_location xiaohong
+1) 1) "120.11378020048141479"
+   2) "30.28870245530456629"
+
+### 获取指定位置范围内的地理信息位置集合
+    
+    georadius key longitude latitude radiusm km|ft|mi [withcoord] [withdist] [withhash] [COUNT count] [asc|desc] [store key] [storedist key] georadiusbymember key member radiusm km|ft|mi [withcoord] [withdist] [withhash] [COUNT count] [asc|desc] [store key] [storedist key]  
+
+    withcoord 将位置元素的经度和维度也一并返回  
+    withdist  返回结果中包含离中心节点位置的距离  
+    withhash：这个命令可以忽略不看，基本用不上  
+    COUNT count：指定返回结果的数量。  
+    asc|desc：返回结果按照离中心节点的距离做升序或者降序。  
+    storedist key：将返回结果离中心节点的距离保存到指定键。    
+
+### 获取离软件园1km内的成员 按距离的升序 列出2个
+
+    127.0.0.1:6379> georadius wx_location 120.117249 30.290268 1 km withcoord withdist count 2 asc
+1) 1) "xiaohong"
+   2) "0.3759"
+   3) 1) "120.11378020048141479"
+      2) "30.28870245530456629"
+2) 1) "xiaozhi"
+   2) "0.4317"
+   3) 1) "120.11694520711898804"
+      2) "30.28639585904956277"  
+
+### 实践
+
