去除部分博客

--- a/_posts/2021-09-07-git操作.md
+++ b/_posts/2021-09-07-git操作.md
@@ -49,7 +49,7 @@ tags:
     git push -u <origin> <master> // -u 为绑定本地分支和远端分支 -f为强制推送  origin为对应仓库简称 master为当前分支
 
 ### tag标签
-    git tag <tagname>
+    git tag <tagname> -m 'xxx' 
     git push origin <tagname>
 
 ### 拉取远端代码
